syntax = "proto3";

                 package creatureImmunity;
service CreatureImmunityService {
 rpc createCreatureImmunity (CreatureImmunityCreateInput) returns (CreatureImmunity) {}
rpc creatureImmunities (findManyParams) returns (stream CreatureImmunity) {}
rpc creatureImmunity (CreatureImmunityWhereUniqueInput) returns (CreatureImmunity) {}
rpc updateCreatureImmunity (CreatureImmunityUpdateInput) returns (CreatureImmunity) {}
rpc deleteCreatureImmunity (CreatureImmunityWhereUniqueInput) returns (CreatureImmunity) {}
rpc findManyCreatureImmunities (CreatureImmunityWhereUniqueInput) returns (stream Creature) {}
rpc updateCreatureImmunities (CreatureParams) returns (stream Creature) {}
rpc connectCreatureImmunities (CreatureParams) returns (Creature) {}
rpc disconnectCreatureImmunities (CreatureParams) returns (Creature) {} 
 }
message CreatureImmunityCreateInput {
string auras = 1;
string comment = 2;
string createdAt = 3;
repeated Creature creatures = 4;
string dispelMask = 5;
string effects = 6;
string id = 7;
string mechanicMask = 8;
string schoolMask = 9;
string updatedAt = 10;
};
message CreatureImmunity {
string auras = 1;
string comment = 2;
string createdAt = 3;
repeated Creature creatures = 4;
string dispelMask = 5;
string effects = 6;
string id = 7;
string mechanicMask = 8;
string schoolMask = 9;
string updatedAt = 10;
};
message CreatureImmunityWhereUniqueInput {
string auras = 1;
string comment = 2;
string createdAt = 3;
repeated Creature creatures = 4;
string dispelMask = 5;
string effects = 6;
string id = 7;
string mechanicMask = 8;
string schoolMask = 9;
string updatedAt = 10;
};
message CreatureImmunityUpdateInput {
string auras = 1;
string comment = 2;
string createdAt = 3;
repeated Creature creatures = 4;
string dispelMask = 5;
string effects = 6;
string id = 7;
string mechanicMask = 8;
string schoolMask = 9;
string updatedAt = 10;
};
message findManyParams {

};
message Creature {
int32 areaId = 1;
string behaviourName = 2;
string createdAt = 3;
string id = 4;
int32 mapId = 5;
int32 modelId = 6;
string name = 7;
int32 realmId = 8;
string transformId = 9;
string updatedAt = 10;
int32 zoneId = 11;
};
message CreatureWhereUniqueInput {
int32 areaId = 1;
string behaviourName = 2;
string createdAt = 3;
string id = 4;
int32 mapId = 5;
int32 modelId = 6;
string name = 7;
int32 realmId = 8;
string transformId = 9;
string updatedAt = 10;
int32 zoneId = 11;
};
message CreatureParams {
CreatureImmunityWhereUniqueInput creatureImmunityWhereUniqueInput = 1;
CreatureWhereUniqueInput creatureWhereUniqueInput = 2;
};